syntax = "proto3";

service TimeClock {
  rpc ClockIn(ClockInRequest) returns (ClockInResponse);
  rpc ClockOut(ClockOutRequest) returns (ClockOutResponse);
  rpc GetHours(GetHoursRequest) returns (GetHoursResponse);
}

message ClockInRequest {
  string period = 1;
}

message ClockInResponse {
  int64 id = 1;
  string period = 2;
}

message ClockOutRequest {
  int64 id = 1;
}

message ClockOutResponse {
  int64 hours = 1;
  int64 minutes = 2;
  float worked = 3;
}

message GetHoursRequest {
  string period = 1;
}

message GetHoursResponse {
  string period = 1;
  int64 total_hours = 2;
  int64 total_minutes = 3;
  float time_to_report = 4;
}
